# jnfo

./: .clang-format  Makefile.am  configure.ac  readme.md
.github/workflows/: release.yml
debian/: changelog  control  jnfo.install
include/: cpu.h  defines.h  filesystem.h  formatter.h  gpu.h  inet.h  mem.h  parse_size.h  power.h  thermal.h  utils.h
src/: main.cpp
test/: jinfo.py  strace_tegrastats_open.txt  strace_tegratats.txt  tegrastats.txt
test/etc/: mtab
test/proc/: meminfo
test/proc/device-tree/: compatible  model
test/sys/bus/i2c/drivers/ina3221x/6-0040/iio:device0/: crit_power_limit_0  warn_current_limit_0
test/sys/class/devfreq/57000000.gpu/: cur_freq  max_freq
test/sys/class/net/: dummy0  eth0
test/sys/devices/1003000.pcie/: address
test/sys/devices/1003000.pcie/statistics/: rx_bytes  tx_bytes
test/sys/devices/system/cpu/cpu0/cpufreq/: cpuinfo_max_freq
test/sys/devices/virtual/thermal/thermal_zone1/: type
test/sys/devices/virtual/thermal/thermal_zone2/: type
test/sys/kernel/debug/clk/nvenc/: clk_rate
test/sys/kernel/debug/nvmap/iram/: clients  size
